--- a/TM/K Nearest Neighbours Tuning.ipynb
+++ b/TM/K Nearest Neighbours Tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,21 +41,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using a total of 14640 tweets\n",
-      "Training sample size: 13163\n",
-      "Testing sample size: 1477\n"
+      "Using a total of 4392 tweets\n",
+      "Training sample size: 3934\n",
+      "Testing sample size: 458\n"
      ]
     }
    ],
    "source": [
     "from lib import processing\n",
     "\n",
-    "training_data, testing_data = processing.process_data(df, sample_size=1)"
+    "training_data, testing_data = processing.process_data(df, sample_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unigram features 1721\n",
-      "Bigram features:  1203\n"
+      "Unigram features 664\n",
+      "Bigram features:  197\n"
      ]
     }
    ],
@@ -95,11 +95,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training with k =  3\n",
+      "Training: K Nearest Neighbours Classifier\n",
+      "Training classifier\n",
+      "Evaluating SklearnClassifier results...\n",
+      "Training with k =  5\n",
+      "Training: K Nearest Neighbours Classifier\n",
+      "Training classifier\n",
+      "Evaluating SklearnClassifier results...\n",
+      "Training with k =  10\n",
+      "Training: K Nearest Neighbours Classifier\n",
+      "Training classifier\n",
+      "Evaluating SklearnClassifier results...\n",
+      "Training with k =  15\n",
+      "Training: K Nearest Neighbours Classifier\n",
+      "Training classifier\n",
+      "Evaluating SklearnClassifier results...\n"
+     ]
+    }
+   ],
    "source": [
     "from nltk.classify import SklearnClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -121,11 +144,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x1132b6e48>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYwAAAEPCAYAAABRHfM8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XmclXX5//HXGxT3Bc2lVHDLtcwVNRdGCUNMMCVxKdMs\nrdxSc0stSq3sV5m5pUampjKogaapqDmaK7ighCCowBfEMPcFF4Tr98fnHjgMs5wZ5p77nJn38/GY\nB/e5z33uc80Ac53Pdn0UEZiZmbWkW9EBmJlZdXDCMDOzsjhhmJlZWZwwzMysLE4YZmZWFicMMzMr\nS+4JQ9IASZMlTZF0RiPP95X0tqSns69zSp6bLulZSc9IGpt3rGZm1rRl8ry5pG7ApUA/YDYwTtJt\nETG5waUPRcSgRm6xAKiJiLfyjNPMzFqWdwujDzA1ImZExDxgBDC4kevUxOuFu83MzCpC3r+M1wNm\nljyelZ1raFdJ4yXdKWmrkvMB3CtpnKTv5RmomZk1L9cuqTI9BfSKiLmS9gVGA5tlz+0WEa9KWouU\nOCZFxMOFRWpm1oXlnTBeAXqVPF4/O7dQRLxfcnyXpMslrRERb0bEq9n5/0kaReriWiJhSHJBLDOz\nVoqIpoYDGpV3l9Q4YFNJvSX1AA4Bbi+9QNI6Jcd9AEXEm5JWlLRydn4lYB/gP029UURU5dfPfvaz\nwmNw/MXH4fir86ua42+LXFsYETFf0vHAGFJyGh4RkyQdm56Oq4Ahkn4AzAM+BIZmL18HGJW1HpYB\nboiIMXnGa2ZmTct9DCMi7gY2b3DuypLjy4DLGnndNGDbvOMzM7PyeMpqwWpqaooOYak4/mI5/mJV\ne/ytpbb2ZVUSSdEZvg8zs44iiaiwQW8zM+sknDDMzKwsThhmZlYWJwwzMyuLE4aZmZXFCcPMzMri\nhGFmZmVxwjAzs7I4YZiZWVmcMMzMrCxOGGZmVhYnDDMzK4sThpmZlcUJw8zMyuKEYWZmZXHCMDOz\nsjhhNOOTT2D06KKjMDOrDE4YLTjpJHj88aKjMDMrnhNGM3r0gDPPhPPOKzoSM7PieU/vFnz8MWyy\nSeqa2nHHXN7CzKzDeU/vHCy3HJx+Opx/ftGRmJkVyy2MMnz4IWy8Mdx9N3zpS7m9jZlZh3ELIycr\nrACnneZWhpl1bW5hlOmDD1Ir4/774QtfyPWtzMxy5xZGjlZaCU45BS64oOhIzMyK4RZGK7z3Xmpl\n/PvfsMUWub+dmVluKrKFIWmApMmSpkg6o5Hn+0p6W9LT2dc5DZ7vlp2/Pe9YW7LKKmkh3y9/WXQk\nZmYdb5k8by6pG3Ap0A+YDYyTdFtETG5w6UMRMaiJ25wEPA+sml+k5TvhhLQu48UXYdNNi47GzKzj\n5N3C6ANMjYgZETEPGAEMbuS6RptFktYHBgJ/zi/E1lltNTjuOPjVr4qOxMysY+WdMNYDZpY8npWd\na2hXSeMl3Slpq5LzFwGnARU10HLSSWnl9/TpRUdiZtZxKmGW1FNAr4jYltR9NRpA0teAORExntQC\nadXgTJ7WWAOOPRZ+/euiIzEz6zi5jmEArwC9Sh6vn51bKCLeLzm+S9JlktYAvgwMkjQQWAFYRdJ1\nEXFEY280bNiwhcc1NTXU1NS01/fQqFNOgc02g7PPhg02yPWtzMyWWl1dHXV1dUt1j1yn1UrqDrxA\nGvR+FRgLHBoRk0quWSci5mTHfYCREbFhg/v0BU5tamC8o6bVNnT66TB3Llx6aYe/tZnZUqm4abUR\nMR84HhgDTARGRMQkScdKOia7bIik/0h6BvgDMDTPmNrTqafCjTfC7NlFR2Jmlj8v3FtKJ5+c/rzo\nokLe3sysTdrSwnDCWEqzZ6faUpMmwTrrFBKCmVmrVVyXVFfwuc/BYYfB735XdCRmZvlyC6MdzJyZ\n9smYMgU+85nCwjAzK5tbGAXZYAP4xjc8jmFmnZtbGO1k+nTYYQeYOjUt7DMzq2RuYRRoww3hgAPg\n4ouLjsTMLB9uYbSjF1+EXXaBl15KRQrNzCqVWxgF23RTGDgQLrmk6EjMzNqfWxjtbPJk2HPP1MpY\nZZWiozEza5xbGBVgiy2gXz+4/PKiIzEza19uYeRg4kTYe294+WVYaaWiozEzW5JbGBVi661hjz3g\nyiuLjsTMrP24hZGT8eNh331TK2OFFYqOxsxscW5hVJBtt4Wdd4arry46EjOz9uEWRo6eegoGD07r\nM5ZfvuhozMwWcQujwuywQypKeM01RUdiZrb03MLI2eOPw9ChqcZUjx5FR2NmlriFUYF22QU23xyu\nu67oSMzMlo5bGB3g4YfhiCPghRdg2WWLjsbMzC2MirX77tC7N9x4Y9GRmJm1nVsYHeSBB+DYY9Pe\n3927Fx2NmXV1bmFUsJoaWHttqK0tOhIzs7ZxC6MDjRkDP/oRTJjgVoaZFcstjArXvz+suircemvR\nkZiZtZ4TRgeS4Nxz4fzzYcGCoqMxM2sdJ4wONnBgmlp7221FR2Jm1jpOGB1Mgp/+FM47D6pg2MXM\nbCEnjAIMGgTz58OddxYdiZlZ+ZwwClA/lvGLX7iVYWbVI/eEIWmApMmSpkg6o5Hn+0p6W9LT2dc5\n2fnlJD0h6RlJEyX9Mu9YO9KBB8IHH6SptmZm1SDXdRiSugFTgH7AbGAccEhETC65pi9wakQMauT1\nK0bEXEndgUey6x5p5LqqWIfR0E03wSWXwCOPpFaHmVlHqcR1GH2AqRExIyLmASOAwY1c12jQETE3\nO1yOFOtbuURZkIMPhjfegH/9q+hIzMxalnfCWA+YWfJ4VnauoV0ljZd0p6St6k9K6ibpGeC/QF1E\nPJ9vuB2re3c4++w0Y8rMrNItU3QAwFNAr6zraV9gNLAZQEQsALaTtCowRlLfiHiwsZsMGzZs4XFN\nTQ01NTV5x90uDjssDX4/+CD07Vt0NGbWWdXV1VFXV7dU98h7DGMXYFhEDMgenwlERFzYzGumATtE\nxJsNzp8LzI2I3zXymqocw6g3fHgaz7jvvqIjMbOuohLHMMYBm0rqLakHcAhwe+kFktYpOe5DSmJv\nSvqMpNWy8ysA/YHxOcdbiG99C158ER59tOhIzMyalmuXVETMl3Q8MIaUnIZHxCRJx6an4ypgiKQf\nAPOAD4Gh2cs/C1wrSdlrr4+I+/OMtyg9esBZZ6WxjLvuKjoaM7PGubx5hfj4Y9h0U/j732GnnYqO\nxsw6u0rskrIyLbccnHGGZ0xZed54A667LnVlmnUUtzAqyEcfwcYbpxpT221XdDRWad5+G0aPTrs2\nPvII7LILTJkCjz0Gn/1s0dFZtXELo8otvzycdlraL8MM4L334IYbUsHKXr1g1Kg0SeKVV1JZmaOP\nhv33T2VmzPLmFkaFmTs3tTLuvRe++MWio7EifPBBamXW1qZ/B7vvDkOHwuDBsPrqi18bAd/5Tuqi\nGjXKW/9a+drSwnDCqEC/+Q089VT6hWFdw0cfpRlytbXpz513TknigANgzTWbf+0nn6SNubbaCv74\nx46J16qfE0Yn8f77qZXx4IOw5ZZFR2N5+eST1K1UWwt33AHbbpuSxEEHwVprte5eb78Nu+0GxxwD\nJ52UT7zWuThhdCK//CU8/zz87W9FR2Ltad68VGyytjZt07vllilJDBmy9APXM2bAl78Ml12WWiZm\nzXHC6ETefRc22SSt/v7854uOxpbG/PmptVhbm9bZbLxxShLf+AZssEH7vteTT8K++6YxkD592vfe\n1rk4YXQyP/85TJ8O11xTdCTWWgsWpKmvI0bArbfC5z6XksTBB8NGG+X73rffDt//fnr/vN/LqpcT\nRifz1ltp9fe4celTqVW2CHj88dSSuPnmNFh98MEpUXR0K/GSS+CKK1LS6NmzY9/bqoMTRid0zjnw\n2mtw1VVFR2KNiVg0o23kSFhxxUUtia22avn1eTr5ZBg/Hu65J9UrMyvlhNEJvfFG+nT6zDPQu3fR\n0RikJPHcc4uSBKQkMXRoWjtTKdvtzp+fBtNXWQWuvbZy4rLKkEvCkHQC8LeIqNjtUTtzwoBUY+q9\n9+Dyy4uOpGt7/vmUJGpr07qJ+u6m7bev3F/Gc+dCTQ3stx/87GdFR2OVJK+EcT5pH4ungb8A91Ta\nb+fOnjBeew222AImTID1Gtvg1nIzdeqiJPHWW2lm09ChaWFdpSaJhubMSXWnhg2Db3+76GisUuTW\nJZXtSbEPcBSwIzCStLfFS20JtL119oQBcOqp8OmncPHFRUfS+U2blrqaamth9uzUrTN0aFoY161K\nq69NmpRaGiNGwF57FR2NVYJcxzAkfYmUMAYADwC7APdGxOmtDbS9dYWE8eqrsPXWqVtk3XWLjqbz\nmTkzzWyqrYWXX06rrYcOhT337Dz1mR54AA45JP1Z9IC8FS+vLqmTgCOA14E/A6MjYp6kbsDUiNik\nrQG3l66QMABOPDHNdvntb4uOpHN49dVFSWLy5LQ6eujQ9Al82WWLji4f112XxjIee8wfPLq6vBLG\nz4G/RMSMRp7bMiImtS7M9tdVEsasWbDNNvDCC62vNWTJa6+lhXS1tfDss6k0+NCh0L9/15l6+vOf\np5XgdXVpGrB1TXkljF2AiRHxXvZ4VWDLiHiizZG2s66SMAB+8INU4vpXvyo6kurx5pupJEdtbVoE\nue++KUkMGJD2IOlqIuDII1P5mVtu6TxdbtY6eSWMZ4Dt638jZ11RT0bE9m2OtJ11pYQxY0aaxjll\nSstlr7uyd95ZfHe6/v1TkthvP3+qhlQpd8AA+NKX4KKLio7GipDXjnuL/TaOiAXAMq0NztpH797w\n9a97tlRj3nsPbrwxbTS0wQapVfHNb6auvFtuSVNinSySHj1S19w996QyImblKKeF8XegDrgiO/VD\nYK+IqJgCyl2phQHw0ktpHcCLLy65A1tXM3fu4rvT7bZb07vT2ZKmT08l0f/0p7QNrHUdeXVJrQ38\nEdgbCOB+4EcR8VpbA21vXS1hQFqAtckm8NOfFh1Jx/voI7j77kW70/XpU/7udLaksWNTV91dd8GO\nOxYdjXUU15LqQl54Ie31/NJLsOqqRUeTv08+SS2I2lr4xz+Wbnc6W9Lo0XDccWn/Fdcs6xryamEs\nDxwNbA0snFMSEd9pS5B56IoJA+Dww+ELX4Czzio6knzU7043cmT6hdaeu9PZki6+GK6+Gh5+2N15\nXUFeCeNmYDJwGPAL4HBgUkRUzM7BXTVhPP98Kvfw8suw8spFR9M+OnJ3OlvSiSfCxImpe6qrrEvp\nqnKbVhsR20l6LiK2kbQs8O+I2GVpgm1PXTVhQKqY2qcP/PjHRUfSdvW709XWptlMHbk7nS1u/vw0\nC2/NNeEvf6meAovWenkljLER0UfSQ6QZUv8FxkZExewB15UTxnPPwVe/msYyqmnKaAQ88cSi3enW\nWKO43elscR98AH37pkkE55xTdDSWl7zWYVwlqSdwDnA78DxwYSuCGiBpsqQpks5o5Pm+kt6W9HT2\ndU52fn1J/5I0UdIESSeW+55dyTbbpNLVV19ddCQtq9+d7vTTU8vhqKNgtdVgzJiU+M45x8miEqy0\nEtxxB/z5z/C3vxUdjVWSZlsY2aruIRExsk03T6+fAvQDZgPjgEMiYnLJNX2BUyNiUIPXrgusGxHj\nJa0MPAUMLn1tybVdtoUB8PTTqSbSSy9VXqmLiLSPR/2eElCZu9PZkiZOTIUYb745tTisc2n3Fka2\nqntpypf3IVW0nRER84ARwOBGrlsi6Ij4b0SMz47fByYB3j6oEdtvD9ttB8OHFx3JIpMmpQ17ttoq\nLQibNy8ljKlT4YILUsvIyaKybb013HRT6iqcvMTHNOuKyumSuk/SjyVtIGmN+q8y778eMLPk8Swa\n/6W/q6Txku6UtESlfkkbAtsCFVPwsNKcey5ceCF8/HFxMUydCuefn5JB//6pntM116QNiX7zG9hh\nByeJatOvX/p3NXBgqvRrXVs5NaGGZn8eV3IugPYa9H4K6BURcyXtC4wGNqt/MuuOugU4KWtpNGrY\nsGELj2tqaqipqWmn8KrDzjunT/PXXgvHHNNx7zt9+qLupvrd6S67rLp3p7PFHXlkmro9aFBaF1NN\nkytskbq6Ourq6pbqHrmu9M5Kow+LiAHZ4zOBiIgmB80lTQN2iIg3JS0D3AHcFRFNltvr6mMY9R55\nJBXbmzIl3w2AZs1atIVpZ92dzhYXAUcckWp33XyzPwx0BnlNqz2isfMRcV0ZAXUHXiANer8KjAUO\nLd10SdI6ETEnO+4DjIyIDbPH1wGvR8QpLbyPE0amX7+UNI46qn3v++qraY1EbW0an+gKu9PZ4j7+\nGPbZB3baybs+dgZ5JYzS4sfLk375Px0RQ8oMagBwMWm8ZHhE/FrSsaSWxlWSjgN+AMwDPgROjogn\nJO0GPARMIHWBBfCTiLi7kfdwwsjU1cF3v5sGKZdZyiL0//vfot3pxo/vmrvT2eLefDNVtz3hhFR7\nyqpXhxQflLQ6MKK+m6kSOGEsEpGmQB5zTGpptNabb8KoUSlJjB3r3elsSS+/nApfXnUVfO1rRUdj\nbdVRCWNZ4D8RsXmrXpgjJ4zF3XcfHH98mkdfzpjCO+/AbbelJPHww96dzlr2xBOpxXn33Wlat1Wf\ntiSMFjstJP2D1B0EqVtpK6BNC/msY/TrBz17psHJQw5p/Jr3309lwmtr4YEHUhHDww+HESNglVU6\nNFyrQjvvvGjTpUcfhV69io7IOkI5Yxilazw/BWZExKxco2oltzCWdNddcNppqeRG/YyWuXPhn/9M\nSWLMGO9OZ0vv979Pa20efjiVebHqkdeg90bAqxHxUfZ4BWCdiJje1kDbmxPGkiJSFdsf/SjVBvLu\ndJaHiDQAPmVK2irXM+aqR14J40ngyxHxSfa4B/BIROzU5kjbmRNG4+64I3UZ9O3r3eksP59+mj6A\nrLtuKoLp1fzVIa+EMT4itm1w7tmI+FIbYsyFE0bT3nvPYxKWv/ffTws3hwyBn/yk6GisHHmVN/+f\npIWVZCUNBl5vbXBWDCcL6wgrr5xatFdemQoWWudUTgtjE+AG4HPZqVnAERHxYs6xlc0tDLPKMGFC\nmqV3662wxx5FR2PNyXUdRlYEsL7UeEVxwjCrHPfeC9/6VtqbffOKWa1lDeXSJSXpl5JWj4j3I+J9\nST0lnd/2MM2sM+vfP+15st9+qbyMdR7ljGHsGxFv1z+IiLeAgfmFZGbV7uij06LRwYPhww+Ljsba\nSzkJo7uk5eofZOswlmvmejMzzjsPNtwwlUVfsKDoaKw9lJMwbgDul3S0pO8C9wLX5huWmVU7Ka0C\nnzMHzjyz6GisPZQ16J2VKP8KqabUu8C6EVExxY096G1Wud54I5VEP/lk+P73i47G6uVSfDAzh5Qs\nvgFMA25tZWxm1kWtuWaqYbb77qlI4UCPgFatJlsYkjYDDgUOAV4DbgZOi4jeHRdeedzCMKt8jz2W\nBsHHjIFtt235estXu67DkLSAtJ/2cRExMzv3ckRsvNSRtjMnDLPqcMstqWvqscdg/fWLjqZra+91\nGAcCc4GHJP1J0t6Ay4qZWZsNGQInnpjWaLz7btHRWGuVUxpkJWAwqXtqb+A6YFREjMk/vPK4hWFW\nPSLghz+EadPSJl4uiV6M3LdoldSTNPA9NCL6tTK+3DhhmFWXTz9NpffXXz8VLHRJ9I7XIXt6VyIn\nDLPq8957qST6IYfAGWcUHU3Xk+e0WjOzdrXKKqkk+q67phXhQ4cWHZG1xAnDzAqz3nopaXzlK6l7\narfdio7ImlNOaRAzs9xssw1cf33aQnjq1KKjseY4YZhZ4b761VSscOBAeN37eVYsD3qbWcU46yz4\n97/hvvtg+eWLjqZz8ywpM6tqCxbAYYel4xtvhG7uA8lNLjvumZl1lG7d4K9/hVmz4Oyzi47GGso9\nYUgaIGmypCmSlphtLamvpLclPZ19nVPy3HBJcyQ9l3ecZlYZll8eRo9OdaeuvrroaKxUrtNqJXUD\nLgX6AbOBcZJui4jJDS59KCIGNXKLa4BLSOVIzKyL+MxnUkn0PfZIJdG/+tWiIzLIv4XRB5gaETMi\nYh4wglSXqqFG+9Ei4mHgrRzjM7MK9fnPw623wre+Bc8+W3Q0BvknjPWAmSWPZ2XnGtpV0nhJd0ra\nKueYzKxK7LYbXHIJ7L8/vPJK0dFYJaz0fgroFRFzJe0LjAY2a+1Nhg0btvC4pqaGmpqa9orPzAo0\ndChMnw5f+xo89FAqKWKtV1dXR11d3VLdI9dptZJ2AYZFxIDs8ZlARMSFzbxmGrBDRLyZPe4N/CMi\ntmnmNZ5Wa9aJRcCxx6bZU7ffDstUwkfdKleJ02rHAZtK6i2pB2m719tLL5C0TslxH1ISe7P0Erxx\nk1mXJsFll6V1GieckBKIdbxcE0ZEzAeOB8YAE4ERETFJ0rGSjskuGyLpP5KeAf4ALKxZKelG4FFg\nM0n/J+moPOM1s8q17LIwciQ8+ij87ndFR9M1eaW3mVWVWbNSSfTf/x6+8Y2io6le3g/DzDq99ddP\nW7vus0863nXXoiPqOlwaxMyqzrbbwrXXwoEHwksvFR1N1+GEYWZVad99YdiwVBL9jTeKjqZr8BiG\nmVW100+Hxx+He++F5ZYrOprq4fLmZtblLFiQFvctuyz87W8uiV6uSlyHYWaWq27d4Lrr0mrwn/60\n6Gg6NycMM6t6K6wAt90GI0bA8OFFR9N5eVqtmXUKa62VSqLvuWcqid6/f9ERdT5uYZhZp7HZZnDz\nzXD44TBhQtHRdD5OGGbWqeyxB1x8capuO3t20dF0Lu6SMrNO59BDYdq0RSXRV1656Ig6B0+rNbNO\nKQK+9z3473/THuEuib44T6s1M8tIcMUV8MkncNJJLoneHpwwzKzTWnbZNAj+0ENw0UVFR1P93Egz\ns05ttdXgzjvhy1+GDTdMBQutbZwwzKzT69Urbe06YACstx7svHPREVUnd0mZWZew/fZwzTVwwAHw\n8stFR1OdnDDMrMvYbz8499xUEv3NN4uOpvp4Wq2ZdTk//jE8+STcc0/XLYnu8uZmZmVYsCDtB77i\niqnSrVr1a7Nz8DoMM7MydOsG118PU6emXfusPJ4lZWZd0oorpplTu+4KG20ERx5ZdESVzwnDzLqs\ntddOazT69oUNNoB+/YqOqLK5S8rMurQttoCRI1PBwokTi46msjlhmFmX17dvKh2y336pWKE1zl1S\nZmakTZfqS6I/+CCstFLREVUeT6s1M8tEwHe+A2+8AaNGQffuRUeUH0+rNTNbChJceSXMnQunnFJ0\nNJUn94QhaYCkyZKmSDqjkef7Snpb0tPZ1znlvtbMrL316AG33AL335+2erVFch3DkNQNuBToB8wG\nxkm6LSImN7j0oYgY1MbXmpm1q9VXX1QSvXfvVLDQ8m9h9AGmRsSMiJgHjAAGN3JdY/1o5b7WzKzd\n9e4Nt90GxxwD48YVHU1lyDthrAfMLHk8KzvX0K6Sxku6U9JWrXytmVkudtwRhg+HwYPTDKqurhKm\n1T4F9IqIuZL2BUYDmxUck5kZAPvvD9OnpzUajzwCPXsWHVFx8k4YrwC9Sh6vn51bKCLeLzm+S9Ll\nktYo57WlhpVUEKupqaGmpmZp4jYzW+iEE9KmSwcdBHffnQbGq01dXR11dXVLdY9c12FI6g68QBq4\nfhUYCxwaEZNKrlknIuZkx32AkRGxYTmvLbmH12GYWa7mz4chQ2DVVeGvf63+kugVtw4jIuYDxwNj\ngInAiIiYJOlYScdklw2R9B9JzwB/AIY299o84zUza0r37nDDDTBpEvziF0VHUwyv9DYza4U5c1JJ\n9GHD4Igjio6m7drSwqiEQW8zs6qxzjppjUZNTSqJvtdeRUfUcVwaxMyslbbcEkaMgEMOSV1UXYUT\nhplZG+y1F/y//5em286ZU3Q0HcMJw8ysjY44Ar797bRWY+7coqPJnwe9zcyWQkTaD/zdd1PRwmop\niV5x02rNzDo7Ca6+Gt55B37846KjyZcThpnZUurRA269Fe65By65pOho8uNptWZm7aBnT/jnPxeV\nRB80qOXXVBuPYZiZtaNx49LMqbvugh12KDqapnkMw8ysYDvtlMY0Bg2CGTOKjqZ9uUvKzKydDR68\nqCT6ww+nHfw6A3dJmZnl5KSTYOLENLZRaSXR29Il5YRhZpaT+fPhwANhzTXTzn2VVBLdYxhmZhWk\ne3e48UZ47jm44IKio1l6HsMwM8vRSivBHXekkugbbQSHH150RG3nhGFmlrN1101JY++9Yf31oW/f\noiNqG3dJmZl1gK23Tt1TBx8MkycXHU3bOGGYmXWQfv3gwgvTdNvXXis6mtZzwjAz60BHHpnGMQYN\ngg8/LDqa1vG0WjOzDhaR9tKYOxduvhm6FfDR3dNqzcyqgAR//jO88QacfnrR0ZTPCcPMrADLLQej\nRsGdd8LllxcdTXk8rdbMrCA9e6aEsfvuqST6fvsVHVHz3MIwMyvQxhunlsZRR8HTTxcdTfOcMMzM\nCrbzzvCnP6WZUzNnFh1N09wlZWZWAQ48MJVEHzgwlURfbbWiI1qSp9WamVWICDjhBJgyJY1tLLts\nfu/l8uZmZlXu00/h61+HddZJO/flVRK9ItdhSBogabKkKZLOaOa6nSTNk3RgybmTJE3Ivk7MO1Yz\ns6ItswzcdFPape+TT4qOZnG5JgxJ3YBLga8CWwOHStqiiet+DdxTcm5r4GhgR2Bb4GuSNs4z3iLU\n1dUVHcJScfzFcvzFyiv+lVeG3/42rdWoJHm3MPoAUyNiRkTMA0YAgxu57gTgFqC0HNeWwBMR8XFE\nzAceAg5s5LVVzf9hiuX4i+X4q0veCWM9oHSS2Kzs3EKSPgccEBFXAKX9af8B9pDUU9KKwEBgg5zj\nNTOzJlTCtNo/AKVjGwKIiMmSLgTuBd4HngHmd3x4ZmYGOc+SkrQLMCwiBmSPzwQiIi4suebl+kPg\nM8AHwDERcXuDe10AzIyIPzXyPp4iZWbWShU1rVZSd+AFoB/wKjAWODQiJjVx/TXAPyLi79njtSLi\nf5J6AXchNjPKAAAJkklEQVQDu0TEu7kFbGZmTcq1Syoi5ks6HhhDGi8ZHhGTJB2bno6rGr6kweNb\nJa0BzAN+6GRhZlacTrFwz8zM8le1xQclrS/pX5ImVvPCPkndJD0t6faWr64sklaTdLOkSdnfw85F\nx1QuSWdlMT8n6QZJPYqOqSWShkuaI+m5knM9JY2R9IKkeyRVYAWiJmP/TfZvZ7ykWyWtWmSMzWks\n/pLnTpW0IOsNqUhNxS/phOzvYIKkX7d0n6pNGMCnwCkRsTWwK3BcY4sCq8BJwPNFB9FGFwP/jIgt\ngS8BjY5NVRpJvYHvAdtFxDakrtlDio2qLNeQFsGWOhO4LyI2B/4FnNXhUZWnsdjHAFtHxLbAVCo3\ndmg8fiStD/QHZnR4RK2zRPySaoD9gS9GxBeB37Z0k6pNGBHx34gYnx2/T/pltV7zr6os2T+2gcCf\ni46ltbJPg3tExDUAEfFpFY0xvQt8AqwkaRlgRWB2sSG1LCIeBt5qcHowcG12fC1wQIcGVabGYo+I\n+yJiQfbwcWD9Dg+sTE387AEuAk7r4HBarYn4fwD8OiI+za55vaX7VG3CKCVpQ1L5kCeKjaTV6v+x\nVeNA0kbA65KuybrUrpK0QtFBlSMi3gJ+B/wf8ArwdkTcV2xUbbZ2RMyB9CEKWLvgeNrqO8BdRQfR\nGpIGkab6Tyg6ljbaDNhT0uOSHpC0Y0svqPqEIWllUlmRk7KWRlWQtB8wJ2slicVXuVeDZYDtgcsi\nYntgLql7pOJlNclOBnoDnwNWlnRYsVG1m6r78CHpbGBeRNxYdCzlyj4c/QT4WenpgsJpq2WAnhGx\nC3A6MLKlF1R1wsi6E24Bro+I24qOp5V2AwZlCxdvAvaSdF3BMbXGLNKnqyezx7eQEkg12BF4JCLe\nzOqU/R34csExtdUcSesASFqXxeuxVTxJR5K6ZastYW8CbAg8K2kaqTvtKUnV1MKbSfq3T0SMAxZI\nWrO5F1R1wgD+AjwfERcXHUhrRcRPIqJXRGxMGnD9V0QcUXRc5cq6QWZK2iw71Y/qGbx/AdhF0vKS\nRIq9KgbsWbI1ejtwZHb8baCSPzgtFrukAaQu2UER8XFhUZVvYfwR8Z+IWDciNo6IjUgfoLaLiEpO\n2A3/7YwG9gbI/h8vGxFvNHeDqk0YknYDDgf2lvRM1o8+oOi4upgTgRskjSfNkvplwfGUJSKeBa4D\nngKeJf0nariItOJIuhF4FNhM0v9JOoq0LUB/SfUVFVqcGlmEJmK/BFgZuDf7/3t5oUE2o4n4SwUV\n3CXVRPx/ATaWNAG4EWjxA6sX7pmZWVmqtoVhZmYdywnDzMzK4oRhZmZlccIwM7OyOGGYmVlZnDDM\nzKwsThjWapLeKzkeKGmypA0aXPNtSfMlfaHk3IRs98Tm7n1VS1WHs/pVBzZyvq+kf5T/nbSv7Pt9\nOvs+ayUtX1QspSR1eBXYpv6OrLo5YVhbBICkfsAfgAERMbOR62YCZzd8XbM3jjgmIiYvbWztSWmr\n4XJ8EBHbZ6Wi5wHfb8V75Pl/8SetfUHO8ViV8j8KawtJ2gO4EtgvIqY3cd2dwNaSPl//upIb9Jf0\nqKQns0/jK2bnH5C0fXZ8dLYx0ONZy+OPJffuK+kRSS82+CS7mqQ7slbP5SXvd6jSZknPlW4U06C1\ndJDSvvL1n5CvkPQ4cKGkPUsqCjwlaaUWfkb/BjbN7jVK0ris5fHd0veW9FtJz5BKlZwraWwW459K\nrntA0u+zezwvaSdJf89+NueVXHe4pCeyGK9Q2pzrV8AK2bnrm7hOjcVTct/NJT1R8ri3so14spif\naBhzKUnTlG0uJGkHSQ9kxysqbezzePYz3b+Fn6kVLSL85a9WfZH2kngd+EIz13wb+CPwTeCv2bkJ\nQC9gTeBBYIXs/OnAOdnxA6Qihp8FpgGrAd2Bh4A/ZtdcA9Rmx1sCU7PjvqSqub1JyWkMcGB2rxnA\nGqQPSfeT6hcBvFsS80HAX0re4/aS524Hds2OVwS6NfI9v5f9uQypTs+x2ePVsz+Xz34GPbPHC4CD\nSl6/esnxdaRkXP8z+VV2fCJp7461gR6kVlxPYIssxu7ZdZcB32zke2zuusXiafC9PQ30Lvn7+kkL\nMV8DHJgdvwyskR3vQKqbBnABcFh2vBqpxtcKRf/79lfTX25hWFvMI9Wl+W5LF5Iq8e6stGdJvV2A\nrYBHsk+zR5ASSak+QF1EvBOpouzNDZ4fDRARk1h8D4ixETEj0m+hm4DdgZ2AByJVp10A3ADsmV3f\nXP2f0vd8BLhI0gmkX/gLGrl+BUlPA2NJCWp4dv5HSvW26jcJqm9xfUpWLTTTL/u0/RywF7B1yXP1\nW/hOACZExGsR8QnwErABqY7U9sC47Ge6N2nPkobfY3PX1VfubcxIYGh2PBSoLSPmek39jPcBzszi\nqCMlwGbHuKxYyxQdgFWl+cDBwL8knRURv2rqwoiYL+l3wBksGl8QMCYiDm/hfZr7ZV5a3bT0uoZj\nGEHzheFKr284SP3BwosiLpR0B7AfKdHtExFTGlw/N9LeIIsCk/qSfinvHBEfZ90x9e/zUZbYkLQc\n6dP+9hExW9LPGsRT//0uYPHvPUj/jwVcGxGlY0aNae66D+vjacRI4GZJo4AFEfFSGTHX+5RF3d+l\nz4vUopnaQsxWIdzCsLZQRHxE+uV5mKTvtHD9tcBXgLWyx48Du0naBBb2ZX++wWvGkXYDW01p35OD\nmoun5HjnrI+9G+mT8MMl91ojG8A+lPSJFuC/WR99N+DrTb6BtHFETIyI32T3a2wmV2NJaTXgrSxZ\nbEHJ2ECD65cn/fJ/Q2lTsCHNfL+NuR8YImmtLN6eWjRz7RMtGrhv7romE3REvEz6oHAui1oX5cY8\njdQVBYv/Pd5D6mIji2XbFr9LK5QThrVFwMKtTvcFzpb0tSYvjphHGs9YO3v8OmkPh5skPUvq3tq8\nwb1nk8qljyUNIE8D3im9pmE8mbHApcBE4KWIGBVp69IzSUniGWBcRNyRXX8WaXD+YRbf17vhe/wo\nG7QeTxrDaWw70cY+nd8NLCtpYvb9PNbY9RHxDnB1Fvdd2ffR3H0Xey7rmjsHGJP9TMeQxm4glW6f\nIOn67Lpzm7iupRlmtaQtBUa2MuZfAH+UNJbU2qh3Huln85xSie1ftPD+VjCXN7eKJWmliPgg+3Q8\nChge1bezolmn4RaGVbJh2YDoBOBlJwuzYrmFYWZmZXELw8zMyuKEYWZmZXHCMDOzsjhhmJlZWZww\nzMysLE4YZmZWlv8PWpPscjLKnr8AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x112db5630>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "accuracies = [e['evaluation']['Accuracy'] for e in evaluations]\n",
     "plt.plot(k_range, accuracies)\n",
@@ -144,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -164,13 +208,14 @@
     "trainer = {\n",
     "    \"name\": \"K Nearest Neighbours Classifier\",\n",
     "    \"train\": SklearnClassifier(KNeighborsClassifier(n_neighbors = k)).train,\n",
+    "    \"weights\": \"distance\",\n",
     "}\n",
     "evaluation = evaluate_trainer(trainer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -179,11 +224,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Accuracy': 0.5348679756262694, 'Precision [positive]': 0.632768361581921, 'F-measure [neutral]': 0.41923076923076924, 'Precision [neutral]': 0.29579375848032563, 'F-measure [positive]': 0.5450121654501217, 'Precision [negative]': 0.8170515097690941, 'Recall [neutral]': 0.7194719471947195, 'Recall [positive]': 0.47863247863247865, 'F-measure [negative]': 0.612109115103127, 'Recall [negative]': 0.48936170212765956}\n"
+      "{'F-measure [positive]': 0.45544554455445546, 'Precision [negative]': 0.7689243027888446, 'F-measure [neutral]': 0.3076923076923077, 'Recall [positive]': 0.42592592592592593, 'F-measure [negative]': 0.6795774647887325, 'Recall [negative]': 0.6088328075709779, 'Precision [positive]': 0.48936170212765956, 'Recall [neutral]': 0.4367816091954023, 'Precision [neutral]': 0.2375, 'Accuracy': 0.5545851528384279}\n"
      ]
     }
    ],
    "source": [
+    "## TODO try pca reduction.\n",
+    "\n",
     "print(evaluation['evaluation'])"
    ]
   }
